<resources>
    <string name="app_name">BMI</string>
    <string name="bmi">BMI</string>
    <string name="underweight">Underweight</string>
    <string name="overweight">Overweight</string>
    <string name="normal">Normal</string>
    <string name="hint_weight">Enter Weight (kg)</string>
    <string name="hint_height">Enter Height (cm)</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="value_required">Value Required</string>
    <string name="bmiText">Today Must Idex - More Info</string>
    <string name="buttonClose">Close</string>
</resources>